--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "html-webpack-plugin": "^3.1.0",
+    "image-webpack-loader": "^4.2.0",
     "jquery": "^3.0.0",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
@@ -53,6 +55,7 @@
     "react-addons-test-utils": "^0.14.7",
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1",
     "webpack": "2.2.0-rc.0",
     "webpack-dev-server": "^2.2.0-rc.0"
   }
