--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:watch": "nodemon server/index.js",
     "clean": "rimraf dist",
     "build": "NODE_ENV=production npm run clean && webpack -p",
-    "serve": "webpack-dev-server"
+    "serve": "webpack-dev-server",
+    "start": "NODE_ENV=production node server/index.js"
   },
   "author": "Leonardo Gedler",
   "license": "MIT",
